--- a/sekce/souhrn.tex
+++ b/sekce/souhrn.tex
@@ -1,4 +1,23 @@
-\section{Souhrn (Resumé)}
+\section[Souhrn (Resumé)]{Souhrn}
+Teoretická část této seminární práce je rozdělena na dva hlavní tématické
+celky.  První se zabývá a vysvětluje metodu nejmenších čtverců, zatímco ve
+druhém se pojednává o principu termočlánků a jsou zde popsány termoelektrické
+jevy. Informace nabité v těchto dvou částech jsou následně použity pro pro
+popis experimentu z teoretického a praktického pohledu. Experiment je zaměřen
+na měření termočlánku a následné využití metody nejmenších čtverců k výpočtu
+jeho parametru. Nakonec je i uveden způsob možného vylepšení experimentu a
+případná možnost znovu prozkoumání problematiky.
+
+\section*{Resumé}
+Theoretic part of this seminar work is divided into two main sections. First
+section deals with and explains the least squares method and second section is
+about thermocouples and thermoelectric effect. Information acquired in these
+sections are then used for description of the experiment from theoretical and
+practical point of view. Experiment is focused on the measurement of a
+thermocouple and subsequent use of the least squares method to calculate its
+parameter. Finally, a way to possibly improve the experiment and re-examine the
+issue is given.
+
 
 \stepcounter{subsection}
 \addcontentsline{toc}{subsection}{\protect\numberline{\thesubsection} 
