--- a/sekce/3.1-metoda-ctvercu.tex
+++ b/sekce/3.1-metoda-ctvercu.tex
@@ -48,7 +48,7 @@ z~nich využít v~aproximaci naší funkce, čehož právě metoda nejmenších 
 dosahuje. Ta je založena na principu minimalizace součtu druhých mocnin%
 \footnote{Pojmy \emph{druhá mocnina} a~\emph{čtverec} jsou zaměnitelné, protože
 plocha čtverce je druhou mocninou jeho strany.} odchylek mezi naměřenými daty
-a~aproximovanou funkcí. Příkladem této metody může být
+a~aproximovanou funkcí. Příkladnou vizualizací této metody může být
 graf~\ref{graph:leastsquares}.
 
 \plotfig{graf/ctverce.tex}[Ukázka metody nejmenších čtverců][graph:leastsquares]
