--- a/sekce/3.2-termoelektrika.tex
+++ b/sekce/3.2-termoelektrika.tex
@@ -3,32 +3,34 @@
 \label{sec:efekty-termoelektrika}
 Termoelektrický jev se vyznačuje přímou konverzí tepla na elektrické napětí
 a~naopak. Objevuje se vždy u~spojené dvojce různých kovů a~ve své podstatě je
-sdružením čtyřech efektů pod jeden název: efektu Seebecka, Peltierova,
+sdružením čtyř efektů pod jeden název: efektu Seebeckova, Peltierova,
 Thomsonova a~Benedickova.~\mcite{praktikum,diplomka}
 
-Termoelektrické napětí~$E$ vznikající mezi spoji kovů a~je závislé na funkci
+Termoelektrické napětí~$E$ vzniká mezi spoji kovů a~je závislé na funkci
 rozdílu teplot~$\Delta T = T_1 - T_2$. Je vyjádřeno pomocí vztahu
 \eq{
     E = \int_{T_1}^{T_2}\(\alpha\_B(T)-\alpha\_A(T)\)dT\,,
 }
 kde $\alpha\_A$ a~$\alpha\_B$~jsou  Seebeckekovy koeficienty kovů A~a~B a~$T_1$
-a~$T_2$ vyjadřují teploty spojů.  Tento vztah ovšem může být za podmínky
+a~$T_2$ vyjadřují teploty spojů. Tento vztah ovšem může být za podmínky
 nízkého rozdílu teplot převeden do lineární formy
 \eq[m]{
     E &= \(\alpha_A - \alpha_B\)*\(T_2 - T_1\)\,,\\
     E &= \alpha\Delta T\,,
 }
 přičemž $\alpha$ značí koeficient pro danou dvojici kovů (také označován jako
-parametr termočlánku) a~$\Delta T$~je  rozdíl teplot konců.~\cite{diplomka}
+parametr termočlánku) a~$\Delta T$~je rozdíl teplot konců.~\cite{diplomka}
 
 \paragraph{Seebeckův efekt} byl poprvé objeven německým fyzikem Thomasem
 Johannem Seebeckem a~popisuje vlastnost termočlánku, která má za příčinu
 vytváření elektrického napětí na základě rozdílu teplot. Jestliže jeden spoj
 termočlánku začneme zahřívat a~druhý naopak ochlazovat, vznikne na každém konci
-jiný potenciál, což má za důvod vzniku termoelektrického
+jiný potenciál, což je důvodem vzniku termoelektrického
+% "má za důvod vznik" by znamenalo, že termel. napětí je příčinou vzniku
+% rozdílu potenciálů, což je reálně naopak
 napětí.~\cite{jreichl-seebeck}
 
-\paragraph{Peltierův efekt} je považován za přesným opak efektu Seebeckova. Byl
+\paragraph{Peltierův efekt} je považován za přesný opak efektu Seebeckova. Byl
 objeven Jeanem Peltierem v~roce~1834 a~dokazuje, že změna potenciálů, tedy
 protékání proudu, může způsobit změnu teplot. To implikuje přenos tepla
 z~jednoho konce na druhý, což může být využito například pro chlazení předmětu
@@ -44,7 +46,7 @@ různých kovů.~\cite{jreichl-thomson}
 
 \paragraph{Benedickův efekt} pojednává o~vzniku velice malého rozdílu
 potenciálů na koncích vodiče i~v~případě, že oba konce mají stejnou teplotu.
-Aby tak ale nastalo, musí ve vodiči existovat teplotní gradient, jenž tento
+Aby se tak ale stalo, musí ve vodiči existovat teplotní gradient, jenž tento
 rozdíl potenciálů způsobí.~\cite{diplomka} 
 %I když byl tento efekt objeven v~letech~1920 a~1921
 %C.~Benedicksem, po dlouhou dobu nebyl experimentálně prokázán, právě z důvodu
@@ -52,11 +54,12 @@ rozdíl potenciálů způsobí.~\cite{diplomka}
 
 \subsubsection{Termočlánky}
 \wrapfig[0.40\linewidth][][o]{figures/termoclanek.eps}[Příklad zapojení termočlánku]
-Jako termočlánky nazýváme zařízení skládající se ze dvou, spolu spojených,
-druhů kovu. Ty svým spojením vytváření elektrický obvod. Jestliže budeme
+Jako termočlánky nazýváme zařízení skládající se ze dvou spolu spojených
+% tady bych použila přívlastek těsný, neb nespojené už termočlánkem nebudou
+druhů kovu. Ty svým spojením vytvářejí elektrický obvod. Jestliže budeme
 zahřívat jeden spoj kovů a~ochlazovat druhý, můžeme v~tomto obvodu důsledkem
-termoelektrického jevu pozorovat napětí. Toto napětí je ale velice malé, řádově
-pohybující se v~milivoltech.
+termoelektrického jevu pozorovat napětí. Toto napětí je ale velice malé, pohybující se řádově
+v~milivoltech.
 
 %\fullfig[width=0.5\textwidth][h!]{figures/termoclanek.eps}[Příklad zapojení termočlánku]
 
