--- a/sekce/2-cil_prace.tex
+++ b/sekce/2-cil_prace.tex
@@ -1,6 +1,6 @@
 \section{Cíl práce}
 Cílem této seminární práce je osvětlit princip a~použití metody nejmenších
-čtverců, převážně pak zaměřit se na speciální případ lineární regrese. Tato
+čtverců, převážně se pak zaměřit na speciální případ lineární regrese. Tato
 metoda je následně použita pro výpočet parametru termočlánku z~experimentálně
 získaných hodnot, které jsou doprovázeny odpovídajícím vyobrazením v~tabulkách
 a~grafech. 
