--- a/sekce/3.1-metoda-ctvercu.tex
+++ b/sekce/3.1-metoda-ctvercu.tex
@@ -166,10 +166,12 @@ s~nulou.~\cite{wolfram}
 
 Po jednotlivém derivování funkce~$S$ podle~$a$ a~$b$ a~upravení výrazů
 dostáváme dvě rovnice~\eqref{eq:a_def} a~\eqref{eq:b_def}. Ty nám popisují onu
-lineární funkci, již aproximujeme a~$a$ a~$b$ zde figurují jako proměnné. Ty
+lineární funkci, již aproximujeme, a~$a$ a~$b$ zde figurují jako proměnné. Ty
 % po "aproximujeme" by mohla být čárka. Není, pokud kousek s proměnnými závisí
 % na tom, že funkci aproximujeme. Figurují-li jako proměnné tak jako tak,
 % čárka tam bude (neznalost problematiky mi nedovoluje na to sahat)
+%   a a b jsou v té funkci tak či tak, a jen je měníme, aby se funkce hodila
+%   do dat, tedy ano, čárka tam bude
 ovšem v~tento moment neznáme, tedy pro nás to jsou v~tomto případě neznámé.
 To znamená, že se jedná o~soustavu dvou rovnic o~dvou neznámých, kterou můžeme
 jednoduše pomocí dosazovací metody vyřešit pro~$a$.
