--- a/sekce/3.3-experiment.tex
+++ b/sekce/3.3-experiment.tex
@@ -30,9 +30,10 @@ připojení k~mědi.
 
 Připravený drát mědi rozdělíme tak, abychom dostali dva kusy, které mají
 ideální délku na spojení konců konstantanového vodiče a~připravených konektorů.
-Konce těchto dvou drátů odizolujeme, uchytíme je v~koncovkách a~druhý
+Konce těchto dvou drátů odizolujeme, uchytíme je v~koncovkách a~opačné
 % "druhý konec" bych vyměnila za "opačné konce"
-konec zakroutíme s~odizolovanými konci konstantanu%
+%   true
+konce zakroutíme do sebe s~odizolovanými konci konstantanu%
 \footnotei{.}{Při spojování mědi a~konstantanu si musíme dát pozor na to,
 abychom se vyhnuli potřebě pájení. To by totiž přidalo do zařízení další kov
 a~ovlivnilo výsledky.}
@@ -56,7 +57,7 @@ směřující do kádinky a~druhý do termosky, abychom mohli během experimentu
 pozorovat teplotní rozdíl. V~neposlední řadě připojíme k~termočlánku
 milivoltmetr pro měření napětí na termočlánku. 
 
-Do termosky naljeme vodu, přidáme do ní led a~vyčkáme, dokud se teplota
+Do termosky nalijeme vodu, přidáme do ní led a~vyčkáme, dokud se teplota
 neustálí (výsledná teplota by se měla pohybovat okolo~$"0 \C"$). Následně
 nalijeme horkou, až vroucí, vodu do kádinky a~započneme měření. Při klesání
 rozdílu teplot pravidelně odečítáme hodnoty obou teploměrů a~milivoltmetru
