--- a/sekce/3.2-termoelektrika.tex
+++ b/sekce/3.2-termoelektrika.tex
@@ -53,7 +53,7 @@ rozdíl potenciálů způsobí.~\cite{diplomka}
 %velice malé, až neměřitelné, velikosti rozdílu potenciálů.
 
 \subsubsection{Termočlánky}
-\wrapfig[0.40\linewidth][][o]{figures/termoclanek.eps}[Příklad zapojení termočlánku]
+\wrapfig[0.40\linewidth][][o][9]{figures/termoclanek.eps}[Příklad zapojení termočlánku]
 Jako termočlánky nazýváme zařízení skládající se ze dvou spolu spojených
 % tady bych použila přívlastek těsný, neb nespojené už termočlánkem nebudou
 druhů kovu. Ty svým spojením vytvářejí elektrický obvod. Jestliže budeme
