--- a/sekce/souhrn.tex
+++ b/sekce/souhrn.tex
@@ -1,22 +1,29 @@
 \section[Souhrn (Resumé)]{Souhrn}
-Teoretická část této seminární práce je rozdělena na dva hlavní tématické
-celky.  První se zabývá a~vysvětluje metodu nejmenších čtverců, zatímco ve
+Teoretická část této seminární práce je rozdělena na dva hlavní tematické
+% "tematický" vychází ze slova "tematika" (soubor témat)
+celky. První se zabývá metodou nejmenších čtverců a~vysvětluje ji, zatímco ve
+% neseděly pády (v angličtině lze, česky ne)
 druhém se pojednává o~principu termočlánků a~jsou zde popsány termoelektrické
-jevy. Informace nabité v~těchto dvou částech jsou následně použity pro popis
+jevy. Informace nabyté v~těchto dvou částech jsou následně použity pro popis
+% Nejsem si jistá, zda "nabyté" významově sedí. Spíš "shrnuté"?
 experimentu z~teoretického a~praktického pohledu. Experiment je zaměřen na
 měření termočlánku a~následné využití metody nejmenších čtverců k~výpočtu jeho
-parametru. Nakonec je i~uveden způsob možného vylepšení experimentu a~případná
-možnost znovu prozkoumání problematiky.
+parametru. Nakonec je uveden i~způsob možného vylepšení experimentu a~případná
+možnost opětovného prozkoumání problematiky.
+% nejsem si jistá, jestli znovuprozkoumání není jedno slovo... dohledala jsem
+% pouze znovupřezkoumání
 
 \section*{Resumé}
-Theoretic part of this seminar work is divided into two main sections. First
-section deals with and explains the least squares method and second section is
-about thermocouples and thermoelectric effect. Information acquired in these
-sections are then used for description of the experiment from theoretical and
-practical point of view. Experiment is focused on the measurement of
+The theoretical part of this seminar work is divided into two main sections. The first
+section deals with and explains the least squares method and the second section is
+about thermocouples and the thermoelectric effect. Information acquired in these
+% opět mi "acquired" významově nesedí. summarised/explained (ale ne s information)/mentioned
+sections is then used for the description of the experiment from a theoretical and
+practical point of view. The experiment is focused on the measurement of
 a~thermocouple and subsequent use of the least squares method to calculate its
 parameter. Finally, a~way to possibly improve the experiment and re-examine the
 issue is given.
+% angličtina ještě bude chtít jazykáře ;)
 
 
 \stepcounter{subsection}
