--- a/sekce/4-vysledky.tex
+++ b/sekce/4-vysledky.tex
@@ -51,8 +51,9 @@ rozdílu teplot můžeme termoelektrické napětí popsat pomocí rovnice
 \eq{
     E = \alpha\Delta T\,.\lbl{eq:E}\,,
 }
-přičemž pro polovodič typu~T je závislost lineární zhruba do~$"200 \C"$, což
+přičemž pro termočlánek typu~T je závislost lineární zhruba do~$"200 \C"$, což
 % Ve 3.3 máš "termočlánek typu T". Má to tady opravdu být polovodič?
+%   Ne, nemá
 naše data pohodlně splňují.~\cite{thermocoupleinfo}
 
 Tato rovnice neobsahuje konstantní složku, neboli $b=0$. To znamená, že funkce
@@ -89,7 +90,7 @@ hodnot nabývá rovnice tvaru
 }
 
 Po využití tohoto vztahu dostáváme hodnotu~$R^2 = "0.958~5" = "95.85 \%"$, ze
-které můžeme usuzovat, že naše měření bylo poměrně\footnotei{.}{To usuzujeme
+které můžeme usuzovat, že naše měření bylo poměrně přesné\footnotei{.}{To usuzujeme
 % "poměrně přesné"? Chybí slovo
 z~faktu, že nejvyšší hodnota~$R^2$~je~$"100 \%"$.}
 
@@ -105,6 +106,6 @@ při ochlazování.
 
 I~přes tyto fakty ovšem nemají naměřená data velkou chybu a~koeficient
 korelace~$R^2$ vyšel velice blízký~$"100 \%"$. Proto můžeme považovat
-experiment v~rámci mezí za povedený s~vhodným podrobnějším přeměřením
+experiment v~rámci mezí za vydařený s~vhodným podrobnějším přeměřením
 % dala bych "vydařený" místo "povedený", ale to je jen kosmetická
 v~budoucnosti.
