--- a/sekce/souhrn.tex
+++ b/sekce/souhrn.tex
@@ -1,11 +1,13 @@
 \section[Souhrn (Resumé)]{Souhrn}
-Teoretická část této seminární práce je rozdělena na dva hlavní tematické
+Teoretická část této seminární práce je rozdělena na dva hlavní témata.
 % "tematický" vychází ze slova "tematika" (soubor témat)
-celky. První se zabývá metodou nejmenších čtverců a~vysvětluje ji, zatímco ve
+První se zabývá metodou nejmenších čtverců a~vysvětluje ji, zatímco ve
 % neseděly pády (v angličtině lze, česky ne)
 druhém se pojednává o~principu termočlánků a~jsou zde popsány termoelektrické
 jevy. Informace nabyté v~těchto dvou částech jsou následně použity pro popis
 % Nejsem si jistá, zda "nabyté" významově sedí. Spíš "shrnuté"?
+%   Tak předpokládám, že se s tím čtenář nikdy nesetkal, proto se o tom učí,
+%   tedy nebývá informace.
 experimentu z~teoretického a~praktického pohledu. Experiment je zaměřen na
 měření termočlánku a~následné využití metody nejmenších čtverců k~výpočtu jeho
 parametru. Nakonec je uveden i~způsob možného vylepšení experimentu a~případná
@@ -18,6 +20,7 @@ The theoretical part of this seminar work is divided into two main sections. The
 section deals with and explains the least squares method and the second section is
 about thermocouples and the thermoelectric effect. Information acquired in these
 % opět mi "acquired" významově nesedí. summarised/explained (ale ne s information)/mentioned
+%   no tak to je stejný případ, kdy předpokládám, že o tom ten člověk slyší poprvé
 sections is then used for the description of the experiment from a theoretical and
 practical point of view. The experiment is focused on the measurement of
 a~thermocouple and subsequent use of the least squares method to calculate its
