--- a/sekce/5-zaver.tex
+++ b/sekce/5-zaver.tex
@@ -10,7 +10,7 @@ problém proložení lineární funkce daty. To je výhodné, protože mnoho zá
 je lineárních, což vytváří široké možnosti využití.
 
 Jedním z~možných využití metody nejmenších čtverců je zjišťování parametrů
-v~případě termočlánků. Termočlánek je dvojice spolu spojených kovů, u~kterých se
+termočlánků. Termočlánek je dvojice spolu spojených kovů, u~kterých se
 % vynechala bych "v případě"
 projevuje termoelektrický jev. Ten zapříčiňuje vytvoření napětí v~termočlánku
 v~případě rozdílu teplot spojů kovů. To může být výhodné pro použití
@@ -19,12 +19,15 @@ termočlánků například jako teploměry.
 
 Abychom je ovšem mohli takto použít, musíme nejdříve zjistit, jak pro danou
 dvojici kovů závisí napětí na rozdílu teplot. Právě zde nám pomáhá metoda
-nejmenších čtverců, která nám umožňuje změřit napětí na termočlánku za různých
-teplot a~následně je použít pro zjištění koeficientu termočlánku.
+nejmenších čtverců, která nám umožňuje analyzovat naměřená data napětí na
+termočlánku za různých teplot a~tím zjistit koeficientu termočlánku.
+%nejmenších čtverců, která nám umožňuje změřit napětí na termočlánku za různých
+%teplot a~následně je použít pro zjištění koeficientu termočlánku.
 % Reformulovala bych, protože pomocí metody nejmenších čtverců neměříš, pouze
 % vyhodnocuješ. Návrh: Právě zde nám pomáhá metoda nejmenších čtverců, která
 % nám umožňuje použít naměřená napětí na termočlánku za různých teplot pro
 % zjištění koeficientu termočlánku. (vyřeší to i opakování "následně")
+%   Přeformulováno
 Nalezení tohoto koeficientu nám následně umožňuje vypočítat, jaký rozdíl teplot
 se nachází na termočlánku, i~když změříme pouze napětí.
 
@@ -34,5 +37,5 @@ Následně jsme si vysvětlili princip termoelektrického jevu, co je to
 termočlánek a~jak tyto dva pojmy spolu souvisí. Poté jsme si popsali sestavení
 vlastního termočlánku, pro který jsme následně změřili a~za pomoci lineární
 regrese určili parametr, čímž jsme se dopracovali k~cíli naší práce, tedy
-můžeme tuto seminární práci nazvat úspěšnou.
+můžeme tuto seminární práci považovat za úspěšnou.
 % vyměnila bych "nazvat" za "považovat za"
