jazkor feedback feedback

--- a/sekce/5-zaver.tex
+++ b/sekce/5-zaver.tex
@@ -20,7 +20,8 @@ termočlánků například jako teploměry.
 Abychom je ovšem mohli takto použít, musíme nejdříve zjistit, jak pro danou
 dvojici kovů závisí napětí na rozdílu teplot. Právě zde nám pomáhá metoda
 nejmenších čtverců, která nám umožňuje analyzovat naměřená data napětí na
-termočlánku za různých teplot a~tím zjistit koeficientu termočlánku.
+termočlánku za různých teplot, a~tím zjistit koeficientu termočlánku.
+% Důsledkový poměr. Šlo by teoreticky i bez čárky, ale to může být sporné
 %nejmenších čtverců, která nám umožňuje změřit napětí na termočlánku za různých
 %teplot a~následně je použít pro zjištění koeficientu termočlánku.
 % Reformulovala bych, protože pomocí metody nejmenších čtverců neměříš, pouze
@@ -28,6 +29,7 @@ termočlánku za různých teplot a~tím zjistit koeficientu termočlánku.
 % nám umožňuje použít naměřená napětí na termočlánku za různých teplot pro
 % zjištění koeficientu termočlánku. (vyřeší to i opakování "následně")
 %   Přeformulováno
+%TODO "zjistit koeficient", nebo "zjistit hodnotu koeficientu" (nesedí pády)
 Nalezení tohoto koeficientu nám následně umožňuje vypočítat, jaký rozdíl teplot
 se nachází na termočlánku, i~když změříme pouze napětí.
 
