--- a/sekce/souhrn.tex
+++ b/sekce/souhrn.tex
@@ -1,5 +1,5 @@
 \section[Souhrn (Resumé)]{Souhrn}
-Teoretická část této seminární práce je rozdělena na dva hlavní témata.
+Teoretická část této seminární práce je rozdělena na dvě hlavní témata.
 % "tematický" vychází ze slova "tematika" (soubor témat)
 První se zabývá metodou nejmenších čtverců a~vysvětluje ji, zatímco ve
 % neseděly pády (v angličtině lze, česky ne)
@@ -7,7 +7,8 @@ druhém se pojednává o~principu termočlánků a~jsou zde popsány termoelektr
 jevy. Informace nabyté v~těchto dvou částech jsou následně použity pro popis
 % Nejsem si jistá, zda "nabyté" významově sedí. Spíš "shrnuté"?
 %   Tak předpokládám, že se s tím čtenář nikdy nesetkal, proto se o tom učí,
-%   tedy nebývá informace.
+%   tedy nabývá informace.
+%		Stále se mi to nelíbí, ale tak ok...
 experimentu z~teoretického a~praktického pohledu. Experiment je zaměřen na
 měření termočlánku a~následné využití metody nejmenších čtverců k~výpočtu jeho
 parametru. Nakonec je uveden i~způsob možného vylepšení experimentu a~případná
@@ -21,6 +22,7 @@ section deals with and explains the least squares method and the second section 
 about thermocouples and the thermoelectric effect. Information acquired in these
 % opět mi "acquired" významově nesedí. summarised/explained (ale ne s information)/mentioned
 %   no tak to je stejný případ, kdy předpokládám, že o tom ten člověk slyší poprvé
+%		Okej, ale nelíbí se mi to stejně jako v češtině...
 sections is then used for the description of the experiment from a theoretical and
 practical point of view. The experiment is focused on the measurement of
 a~thermocouple and subsequent use of the least squares method to calculate its
