--- a/sekce/1-uvod.tex
+++ b/sekce/1-uvod.tex
@@ -14,14 +14,17 @@ jak by vypadala data dosud nezměřená. Tyto problémy umíme řešit pomocí
 prokládání dat matematickými funkcemi. Proložení dat funkcí\footnote{známo také
 jako \emph{fitování} dat z~anglického \uv{fit}} nám umožňuje ověřit, zda
 předpis naší funkce odpovídá naměřeným datům, vypočítat neznámý parametr
-předpisu (rozšířeno například při počítání různých koeficientů materiálů), nebo
+předpisu (využíváno například při počítání různých koeficientů materiálů), nebo
 vyjádření závislé veličiny pro zatím neměřené vstupní hodnoty (např.~predikce
-počtu nakažených nemocí).
+počtu nakažených nemocí). Máme více možností, jak tohoto proložení dosáhnout,
+přičemž jednou z nejrozšířenějších je metoda nejmenších čtverců.
 
-Abychom mohli data proložit křivkou, musíme znát její parametry. Ty mohou být
-určeny pomocí metody nejmenších čtverců. Nemůžeme ale vytvářet křivky bez
-samotných dat.
+%Abychom mohli data proložit křivkou, musíme znát její parametry. Ty mohou být
+%určeny pomocí metody nejmenších čtverců. Nemůžeme ale vytvářet křivky bez
+%samotných dat.
 
+Ovšem předtím, než začneme modelovat křivky či odvozovat, jak jednotlivé
+závislosti vypadají, musíme nejdříve naměřit samotná data. 
 %\subsection{Termočlánek}
 Jak již bylo zmíněno, digitální měřicí přístroje nahrazují přístroje analogové.
 Aby toho ovšem mohly dosáhnout, musí být schopné vytvářet signál přijatelný
