--- a/sekce/4-vysledky.tex
+++ b/sekce/4-vysledky.tex
@@ -2,6 +2,8 @@
 % Odchylky nepřímé: https://physics.mff.cuni.cz/kfnt/nmr/download/chlan/NAFY003/neprime_mereni.pdf
 
 \section{Výsledky}
+\subfile{4.1-experiment.tex}
+
 \subsection{Naměřená data}
 Data jsme měřili za pomoci dvou digitálních teploměrů značky Vernier
 % "Experiment jsme prováděli", nebo "data/teploty/(...) jsme měřili",
