--- a/seminarka.tex
+++ b/seminarka.tex
@@ -34,7 +34,7 @@
 \leader{Mgr.~Roman Pavlačka,~Ph.D.}
 
 \prohlaseni{\subfile{sekce/prohlaseni.tex}}
-\podekovani{<Poděkování>} %TODO
+\podekovani{\subfile{sekce/podekovani.tex}}
 
 \graphicspath{{./graf/}}
 \addbibresource{sources.bib}
@@ -66,6 +66,7 @@
 \newpage
 \printbibliography[heading=bibnumbered,title={Seznam použité literatury}]
 
+\newpage
 \section{Přílohy}
 \tocotherhead{subsection}
 \tocsection
