cíl práce trpný rod

--- a/sekce/2-cil_prace.tex
+++ b/sekce/2-cil_prace.tex
@@ -1,8 +1,8 @@
 \section{Cíl práce}
 Cílem této seminární práce je osvětlit princip a~použití metody nejmenších
 čtverců, převážně se pak zaměřit na speciální případ lineární regrese. Tato
-metoda by měla následně být použita pro výpočet parametru termočlánku
-z~experimentálně získaných hodnot, které by měly být doprovázeny odpovídajícím
-vyobrazením v~tabulkách a~grafech. 
+metoda je následně použita pro výpočet parametru termočlánku z~experimentálně
+získaných hodnot, které jsou doprovázeny odpovídajícím vyobrazením v~tabulkách
+a~grafech. 
 % přeskakování mezi časy (nevím, zda je běžnou praxí v seminárkách)
 % přidán podmiňovací způsob
