--- a/sekce/4-vysledky.tex
+++ b/sekce/4-vysledky.tex
@@ -15,23 +15,37 @@ o~přesnosti~$"0.2 mV"$ (obr.~\ref{fig:voltmetr}).
 % tabulka dat
 \begin{table}[htbp]
     \centering
-    \begin{tabular}{ccc}
+    \begin{tabular}{r|cccc|cc}
         \toprule
-        \popit{\Delta T}{\C} & \popit{E_1}{mV} & \popit{E_2}{mV}\\
+        $i$ & \popi{\Delta T}{\C} & \popi{E_1}{mV} & \popi{E_2}{mV} & \popi{\overline{E}}{mV} &
+        \popi{\(\Delta T\)^2}{\C^2} & \popi{\Delta T * \overline{E}}{mV\C}\\
         \midrule
-        $80$ & $"2.8"$ & $"2.8"$\\
-        $75$ & $"2.8"$ & $"2.6"$\\
-        $70$ & $"2.6"$ & $"2.4"$\\
-        $65$ & $"2.4"$ & $"2.2"$\\
-        $60$ & $"2.2"$ & $"2.0"$\\
-        $55$ & $"2.0"$ & $"2.0"$\\
-        $50$ & $"1.8"$ & $"1.8"$\\
-        $45$ & $"1.8"$ & $"1.6"$\\
-        $40$ & $"1.6"$ & $"1.4"$\\
-        $35$ & $"1.2"$ & $"1.4"$\\
-        $30$ & $"1.2"$ & $"1.2"$\\
-        $25$ & $"1.0"$ & $"1.0"$\\
-        $20$ & $"1.0"$ & $"1.0"$\\
+%        $80$ & $"2.8"$ & $"2.8"$\\
+%        $75$ & $"2.8"$ & $"2.6"$\\
+%        $70$ & $"2.6"$ & $"2.4"$\\
+%        $65$ & $"2.4"$ & $"2.2"$\\
+%        $60$ & $"2.2"$ & $"2.0"$\\
+%        $55$ & $"2.0"$ & $"2.0"$\\
+%        $50$ & $"1.8"$ & $"1.8"$\\
+%        $45$ & $"1.8"$ & $"1.6"$\\
+%        $40$ & $"1.6"$ & $"1.4"$\\
+%        $35$ & $"1.2"$ & $"1.4"$\\
+%        $30$ & $"1.2"$ & $"1.2"$\\
+%        $25$ & $"1.0"$ & $"1.0"$\\
+%        $20$ & $"1.0"$ & $"1.0"$\\
+        $"1"$  & $"80"$ & $"2,8"$ & $"2,8"$ & $"2,8"$ & $"6~400"$ & $"224,0"$ \\
+        $"2"$  & $"75"$ & $"2,8"$ & $"2,6"$ & $"2,7"$ & $"5~625"$ & $"202,5"$ \\
+        $"3"$  & $"70"$ & $"2,6"$ & $"2,4"$ & $"2,5"$ & $"4~900"$ & $"175,0"$ \\
+        $"4"$  & $"65"$ & $"2,4"$ & $"2,2"$ & $"2,3"$ & $"4~225"$ & $"149,5"$ \\
+        $"5"$  & $"60"$ & $"2,2"$ & $"2,0"$ & $"2,1"$ & $"3~600"$ & $"126,0"$ \\
+        $"6"$  & $"55"$ & $"2,0"$ & $"2,0"$ & $"2,0"$ & $"3~025"$ & $"110,0"$ \\
+        $"7"$  & $"50"$ & $"1,8"$ & $"1,8"$ & $"1,8"$ & $"2~500"$ & $"90,0"$  \\
+        $"8"$  & $"45"$ & $"1,8"$ & $"1,6"$ & $"1,7"$ & $"2~025"$ & $"76,5"$  \\
+        $"9"$  & $"40"$ & $"1,6"$ & $"1,4"$ & $"1,5"$ & $"1~600"$ & $"60,0"$  \\
+        $"10"$ & $"35"$ & $"1,2"$ & $"1,4"$ & $"1,3"$ & $"1~225"$ & $"45,5"$  \\
+        $"11"$ & $"30"$ & $"1,2"$ & $"1,2"$ & $"1,2"$ & $"\phantom{0 }900"$   & $"36,0"$  \\
+        $"12"$ & $"25"$ & $"1,0"$ & $"1,0"$ & $"1,0"$ & $"\phantom{0 }625"$   & $"25,0"$  \\
+        $"13"$ & $"20"$ & $"1,0"$ & $"1,0"$ & $"1,0"$ & $"\phantom{0 }400"$   & $"20,0"$  \\
         \bottomrule
     \end{tabular}
     \caption{Naměřená data}
